--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,7 @@
 		</ant>
 
 		<!-- Compile JWalk -->
-		<javac srcdir="${jwalk.src}" destdir="${jwalk.build}">
+		<javac srcdir="${jwalk.src}" destdir="${jwalk.build}" classpath="${jwalk.lib}/commons-cli-1.1.jar">
 		</javac>
 	</target>
 
